--- a/django/web1/templates/board/edit.html
+++ b/django/web1/templates/board/edit.html
@@ -13,12 +13,12 @@
         제목   <input type="text" name="title" value="{{one.1}}" /><br/>
         내용   <input type="text" name="content" value="{{one.2}}" /><br/>
         작성자 <input type="text" name="writer" value="{{one.3}}" /><br/>
-        <input type="submit" class="btn btn-warning" value="edit" />
+        <input type="submit" class="btn btn-danger" style="margin-right:100px;" value="edit" />
     </form>
 
     <form action="/board/write" method="POST">
         <div class="container">
-            <h2> Edit now!</h2>
+            <h2> 게시판 글수정 </h2>
             <div class="form-inline" style="margin-bottom: 5px;">
                 <label style="width: 100px;" >글번호</label>
                 <input type="text" style="width: 400px;" class="form-control" name="no"
@@ -41,8 +41,9 @@
             </div>
     
             <div class="form-inline" style="margin-bottom: 5px;">
-                <input type="submit" class="btn btn-primary" value="글쓰기" />
-                <a href="/board/list" class="btn btn-secondary">목록으로</a>
+                <input type="submit" class="btn btn-success" value="글쓰기" />
+
+                <a href="/board/list" class="btn btn-success">목록으로</a>
             </div>
         </div>
         </form>
