--- a/django/web1/templates/board/edit.html
+++ b/django/web1/templates/board/edit.html
@@ -1,51 +1,39 @@
+<!-- templates/board/edit.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Edit</title>
-    <link rel='stylesheet' href="/static/css/bootstrap.min.css" />
+    <title>Document</title>
+    <link rel="stylesheet" href="/static/css/bootstrap.css"/>
 </head>
+
 <body>
-    <form action="/board/edit" method="POST">
-        글번호 <input type="text" name="no" value="{{one.0}}" readonly /><br/>
-        제목   <input type="text" name="title" value="{{one.1}}" /><br/>
-        내용   <input type="text" name="content" value="{{one.2}}" /><br/>
-        작성자 <input type="text" name="writer" value="{{one.3}}" /><br/>
-        <input type="submit" class="btn btn-danger" style="margin-right:100px;" value="edit" />
-    </form>
-
-    <form action="/board/write" method="POST">
-        <div class="container">
-            <h2> 게시판 글수정 </h2>
-            <div class="form-inline" style="margin-bottom: 5px;">
-                <label style="width: 100px;" >글번호</label>
-                <input type="text" style="width: 400px;" class="form-control" name="no"
-                value="{{one.0}}" readonly/>
-            </div>
-            
-            <div class="form-inline" style="margin-bottom: 5px;">
-                <label style="width: 100px;" >제목</label>
-                <input type="text" style="width: 400px;" class="form-control" name="title"/>
-            </div>
-            
-            <div class="form-inline" style="margin-bottom: 5px;">
-                <label style="width: 100px;" >내용</label>
-                <textarea rows="6" style="width: 400px;" class="form-control" name="content"></textarea>
-            </div>
-
-            <div class="form-inline" style="margin-bottom: 5px;">
-                <label style="width: 100px;" >작성자</label>
-                <input type="text" style="width: 400px;" class="form-control" name="writer"/>
-            </div>
-    
-            <div class="form-inline" style="margin-bottom: 5px;">
-                <input type="submit" class="btn btn-success" value="글쓰기" />
-
-                <a href="/board/list" class="btn btn-success">목록으로</a>
-            </div>
+    <form action="/board/edit" method="post">
+    <div class="container">
+        <h3>게시판 글수정</h3>
+        <input type="hidden" name="no" value="{{one.0}}" />
+        <div class="form-inline" style="margin-bottom: 5px;">
+            <label>글제목</label>
+            <input type="text" style="width:400px" 
+                value="{{one.1}}"
+                name="title" class="form-control"/>
         </div>
-        </form>
+
+        <div class="form-inline">
+            <label>글내용</label>
+            <textarea rows="6" style="width:400px"
+                name="content" class="form-control">{{one.2}}</textarea>
+        </div>
+
+        <div class="form-inline">
+            <input type="submit" class="btn btn-primary"
+                value="글수정"/>
+            <a href="/board/list" 
+                class="btn btn-secondary">목록으로</a>   
+        </div>
+    </div>
+    </form>
 </body>
 </html>
