--- a/django/web1/templates/board/list.html
+++ b/django/web1/templates/board/list.html
@@ -4,39 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>List</title>
-    <link rel='stylesheet' href="/static/css/bootstrap.min.css" />
+    <title>게시판목록</title>
+    <link rel="stylesheet" href="/static/css/bootstrap.css"/>
 </head>
-<body>
 
+<body>
     <div class="container">
-        <h1> Posting LIST</h1>
-        <hr />
+        <h3>게시판 목록</h3>
         <a href="/board/write" class="btn btn-primary">글쓰기</a>
+       
+        <div class="form-inline row justify-content-end" 
+            style="margin-top:5px; margin-bottom: 5px;">
+            <select class="form-control">
+                <option>제목</option>
+                <option>내용</option>
+                <option>작성자</option>
+            </select>&nbsp;
+            <input type="text" class="form-control"
+                placeholder="검색어" />&nbsp;
+            <input type="submit" class="btn btn-success"
+                value="검색" />
+        </div>
+
         <table class="table">
             <tr>
                 <th>번호</th>
                 <th>제목</th>
                 <th>작성자</th>
                 <th>조회수</th>
-                <th>작성일</th>
+                <th>날짜</th>
             </tr>
             {% for one in list %}
             <tr>
-                <td>{{one.0}}</td>
-                <td>
-                    <a href="/board/content?no={{one.0}}">{{one.1}}
-                    </a>
-                </td>
-                <td>{{one.2}}</td>
-                <td>{{one.3}}</td>
-                <td>{{one.4}}</td>
+                <td>{{ one.0 }}</td>    
+                <td><a href="/board/content?no={{ one.0 }}">{{ one.1 }}</a></td>
+                <td>{{ one.2 }}</td>    
+                <td>{{ one.3 }}</td>    
+                <td>{{ one.4 }}</td>    
             </tr>
             {% endfor %}
         </table>
-
-
     </div>
-    
 </body>
-</html>
+</html> 
