--- a/django/web1/templates/board/content.html
+++ b/django/web1/templates/board/content.html
@@ -8,6 +8,7 @@
     <link rel='stylesheet' href="/static/css/bootstrap.min.css" />
 </head>
 <body>
+    {% autoescape off %}
     <div class="container">
         <div style="margin-top:5px; margin-bottom: 5px;">
             <h3>글내용</h3>
@@ -65,5 +66,6 @@
         <a href="/board/edit?no={{one.0}}" class="btn btn-success">글수정</a>
         <a href="/board/delete" class="btn btn-success">글삭제</a>
     </div>
+    {% endautoescape off %}
 </body>
 </html>
