--- a/django/web1/templates/board/write.html
+++ b/django/web1/templates/board/write.html
@@ -5,23 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Write</title>
-    <link rel='stylesheet' href="/static/css/bootstrap.min.css" />
-</head>
+    <!-- include libraries(jQuery, bootstrap) -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    <!-- include summernote css/js -->
+    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.15/dist/summernote.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.15/dist/summernote.min.js"></script>
+    </head>
 <body>
     <!-- 담길 내용이 길거나, 암호 등 보안이 필요할 경우 => POST
          이외에는 GET 써도 무방 
     -->
     <form action="/board/write" method="POST" enctype="multipart/form-data">
     <div class="container">
-        <h2> something write!</h2>
+        <h2> 게시판 글쓰기</h2>
         <div class="form-inline" style="margin-bottom: 5px;">
             <label style="width: 100px;" >글제목</label>
             <input type="text" style="width: 400px;" class="form-control" name="title"/>
         </div>
         
-        <div class="form-inline" style="margin-bottom: 5px;">
-            <label style="width: 100px;" >내용</label>
-            <textarea rows="6" style="width: 400px;" class="form-control" name="content"></textarea>
+        <div class="form-inline">
+            <div class="form-group">
+                <label>글내용</label>
+            </div>
+            <div class="form-group" style="width:720px">
+                <textarea id="summernote"
+                name="content" class="form-control"></textarea>
+            </div>                
         </div>
         
         <div class="form-inline" style="margin-bottom: 5px;">
@@ -40,6 +52,12 @@
         </div>
     </div>
     </form>
-    
+    <script>
+        $(function(){
+            $('#summernote').summernote({
+                placeholder: '내용을 입력하세요', tabsize: 2, height: 100
+            })
+        })
+    </script>
 </body>
 </html>
