--- a/django/web1/templates/member/exam_select.html
+++ b/django/web1/templates/member/exam_select.html
@@ -7,30 +7,37 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/member/exam_update_all" method="post">
-    {% csrf_token %}
-    <input type="hidden" name="menu" value="1" />
+    <form action="/member/exam_select" method="get">
+        <input type="text" name="txt" />
+        <input type="submit" value="검색" />
+    </form>
+
     <table border="1">
-        {% for one in rows %}
         <tr>
-            <td><input type="checkbox" value="{{one.no}}" name="chk[]" />
-                {{ one.no }}
-            </td>
-            <td>{{ one.name }}</td>
-            <td>{{ one.kor }}</td>
-            <td>{{ one.eng }}</td>
-            <td>{{ one.math }}</td>
-            <td>{{ one.classroom }}</td>
-            <td>{{ one.regdate }}</td>
+            <th>이름</th>
+            <th>국어</th>
+            <th>영어</th>
+            <th>수학</th>
+            <th>강의실</th>
+            <th></th>
+        </tr>
+        {% for row in list %}
+        <tr>
+            <td>{{row.name}}</td>
+            <td>{{row.kor}}</td>
+            <td>{{row.eng}}</td>
+            <td>{{row.math}}</td>
+            <td>{{row.classroom}}</td>
+            <td>{{row.regdate}}</td>
             <td>
-                <a href="/member/exam_delete?no={{ one.no }}">삭제</a>
-                <a href="/member/exam_update?no={{ one.no }}">수정</a>
+                <a href="/member/exam_update?no={{row.no}}">수정</a>
+                <a href="/member/exam_delete?no={{row.no}}">삭제</a>
             </td>
         </tr>
         {% endfor %}
     </table>
-    <input type="submit" value="일괄수정" />
-    <a href="/member/exam_select"> 일괄삭제</a>
-    </form>
+    {% for i in pages %}
+    <a href="/member/exam_select?page={{i}}&txt={{request.GET.txt}}">{{i}}</a>
+    {% endfor %}
 </body>
 </html>
