--- a/django/web1/templates/member/exam_insert.html
+++ b/django/web1/templates/member/exam_insert.html
@@ -17,7 +17,7 @@
                 <td><input type="text" name="kor"/>국어</td>
                 <td><input type="text" name="eng"/>영어</td>
                 <td><input type="text" name="math"/>수학</td>
-                <td><input type="text" name="classroom" value="3"/>반</td>
+                <td><input type="text" name="classroom" />반</td>
             </tr>
         </table>
         <input type="submit" value="추가" />
